# ftxui-bazel

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  hello_ftxui_component.cpp  hello_ftxui_dom.cpp
